samples/_failures_safe/1761664095_960c92_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bb1d85e7.c: In function ‘main’:
./samples/SAFE/__tmp_bb1d85e7.c:178:5: error: expected declaration or statement at end of input
  178 |     printf("Enter input to tokenize: ");
      |     ^~~~~~
